--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  flutter_staggered_grid_view: 0.3.4
+  flutter_svg: 0.18.1
   get: 3.25.6
   flutter:
     sdk: flutter
