--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_staggered_grid_view: 0.3.4
   flutter_svg: 0.18.1
   get: 3.25.6
+  day: ^0.6.4
   flutter:
     sdk: flutter
 
