--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   fl_chart: ^0.12.3
+  statusbar: ^1.1.0
 
 dev_dependencies:
   flutter_test:
